refactor: REST API.
