# src/main/java/com/jve/app/infrastructure/controller/model/dto/StateDto.java
@@ -1,0 +1,73 @@
+package com.jve.app.infrastructure.controller.model.dto;
+
+import java.util.List;
+
+public class StateDto {
+
+    private String id;
+    private String name;
+    private String type;
+    private Integer latitude;
+    private Integer longitude;
+    private List<CityDto> cities;
+
+    public String getId() {
+        return id;
+    }
+
+    public void setId(String id) {
+        this.id = id;
+    }
+
+    public String getName() {
+        return name;
+    }
+
+    public void setName(String name) {
+        this.name = name;
+    }
+
+    public String getType() {
+        return type;
+    }
+
+    public void setType(String type) {
+        this.type = type;
+    }
+
+    public Integer getLatitude() {
+        return latitude;
+    }
+
+    public void setLatitude(Integer latitude) {
+        this.latitude = latitude;
+    }
+
+    public Integer getLongitude() {
+        return longitude;
+    }
+
+    public void setLongitude(Integer longitude) {
+        this.longitude = longitude;
+    }
+
+    public List<CityDto> getCities() {
+        return cities;
+    }
+
+    public void setCities(List<CityDto> cities) {
+        this.cities = cities;
+    }
+
+    @Override
+    public String toString() {
+        return "StateDto{" +
+                "id='" + id + '\'' +
+                ", name='" + name + '\'' +
+                ", type='" + type + '\'' +
+                ", latitude=" + latitude +
+                ", longitude=" + longitude +
+                ", cities=" + cities +
+                '}';
+    }
+}
